--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.9"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.1",
+    "@types/morgan": "^1.7.35",
+    "tslint-config-prettier": "^1.17.0"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "NODE_ENV=development nodemon ./src/index.ts",
     "start": "node ./dist/index.js",
     "prod": "npm run build && npm run start",
+    "tslint": "tslint --project tsconfig.json",
+    "tslint-fix": "tslint --project tsconfig.json --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
