--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "express-typescript-boilerplate",
   "main": "index.js",
   "dependencies": {
-    "@types/node": "^10.12.18",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.9"
+    "typescript": "^3.2.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/morgan": "^1.7.35",
-    "tslint-config-prettier": "^1.17.0"
+    "@types/node": "^10.12.18",
+    "nodemon": "^1.18.9",
+    "tslint": "^5.12.1",
+    "tslint-eslint-rules": "^5.4.0"
   },
   "scripts": {
     "build": "tsc",
