--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "http-status": "^1.3.1",
     "morgan": "^1.9.1",
     "typescript": "^3.2.4"
   },
@@ -18,9 +19,9 @@
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18",
     "nodemon": "^1.18.9",
+    "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-eslint-rules": "^5.4.0",
-    "ts-node": "^8.0.2",
     "typescript": "^3.2.4"
   },
   "scripts": {
