--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "typescript-express-mongo-boilerplate",
   "main": "index.js",
   "dependencies": {
+    "@types/mongoose": "^5.3.12",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "http-status": "^1.3.1",
+    "mongoose": "^5.4.9",
     "morgan": "^1.9.1",
     "typescript": "^3.2.4"
   },
