--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-status": "^1.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.9",
+    "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -24,6 +25,7 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.3.12",
+    "@types/mongoose-unique-validator": "^1.0.1",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18",
     "@types/passport-jwt": "^3.0.1",
